<resources>

    <string name="app_name">UHManoaEats</string>
    <string name="menu_settings">Settings</string>
    
    <string name="title_activity_welcome">UH Manoa Eats</string>
    <string name="desc_welcome">Welcome</string>
    
    <string name="button_ok">OK</string>
	<string name="button_cancel">Cancel</string>
	<string name="button_yes">Yes</string>
	<string name="button_no">No</string>
	<string name="button_submit">Submit</string>
	<string name="button_add">Add</string>
	<string name="button_home">Home</string>
    
    <string name="title_activity_login">Login</string>
    <string name="label_user_name">Username: </string>
    <string name="label_password">Password: </string>
    <string name="label_register">Not a member?</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    
    <string name="title_activity_register">Register</string>
    <string name="label_newUsername">New Username: </string>
    <string name="label_newPassword">New Password: </string>
    <string name="label_repeatPassword">Repeat Password: </string>
    
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="title_main_menu">Main Menu</string>
	<string name="button_restaurants">Restaurants</string>
	<string name="button_locations">Locations</string>
	<string name="button_dishes">Dishes</string>
    <string name="button_logout">Log Out</string>
    <string name="desc_main_menu">Logo</string>
    
    <string name="title_activity_restaurants">Resaurant List</string>
    
    <string name="title_activity_add_restaurant">New Restaurant</string>
    <string name="label_name">Name:</string>
    <string name="label_hours">Hours:</string>
    
    <string name="title_activity_add_location">New Location</string>
    
    <string name="title_activity_restaurant_detail">Restaurant Detail</string>    
    <string name="title_dialog_rate">Rate Restaurant</string>
    <string name="title_dialog_comment">Comment on Restaurant</string>
    <string name="dialog_delete_comment">Would you like to delete your comment?</string>
    <string name="label_location">Location: </string> 
	<string name="button_menu">View Menu</string>
	<string name="button_rate">Rate</string>
	<string name="button_comment">Comment</string>
	
	<string name="title_activity_menu">Menu</string>	
		
	<string name="title_activity_add_dish">New Dish</string>
	<string name="label_restaurant">Restaurant:</string>
	<string name="label_price">Price:</string>
	<string name="label_vegetarian">Vegetarian</string>
	
	<string name="title_activity_dish_detail">Dish Detail</string>
	<string name="button_restaurant">View Restaurant</string>
	
	<string name="title_activity_locations">Locations</string>  
</resources>