<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
	<LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" >
        <TextView 
            style="@style/NormalFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_name" />
        <EditText android:id="@+id/name"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:inputType="textCapWords" />
    </LinearLayout>
        <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" >
        <TextView 
            style="@style/NormalFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_restaurant" />
        <Spinner
    		android:id="@+id/restaurants_spinner"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" >
        <TextView 
            style="@style/NormalFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_price" />
        <EditText android:id="@+id/price"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:inputType="numberDecimal" />
    </LinearLayout>
    <CheckBox
        android:id="@+id/vegetarian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_vegetarian" />
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_submit"
        android:layout_gravity="right"
        android:onClick="onClickSubmit" />
</LinearLayout>