<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" >
        <TextView 
            style="@style/NormalFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_user_name" />
        <EditText android:id="@+id/user_name"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:inputType="text" />
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" >
        <TextView 
            style="@style/NormalFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_password" />
        <EditText android:id="@+id/password"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:inputType="textPassword" />
    </LinearLayout>
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_login"
        android:onClick="onClickLogin" />
    <TextView 
        style="@style/NormalFont"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right" >
        <TextView 
            style="@style/NormalFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_register" />
        <Button
            style="?android:attr/buttonStyleSmall" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_register"
            android:onClick="onClickRegister"/>
    </LinearLayout>
</LinearLayout>